feat : 좌석 캐시 A1과 프런트 연계 반영